Refactor SDK abstract client